[tool.poetry]
name = "teachable-dl"
version = "0.1.0"
description = "for masonGRE"
authors = ["yangyx30678 <yangyx0000001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.24.0"
wget = "^3.2"
requests = "^2.31.0"
seleniumbase = "^4.30.2"
yt-dlp = "2024.04.09"
python-dotenv = "^1.0.1"
m3u8 = "^6.0.0"
ffmpeg = "^1.4"
crypto = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
